// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component only opens the last section when multiple sections have been clicked 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    />
    <p />
  </li>
</ul>
`;

exports[`Accordion component opens a clicked section 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      className="btnTest"
      key="0"
      onClick={[Function]}
    />
    <p />
  </li>
</ul>
`;

exports[`Accordion component renders an empty li when the sections prop is not supplied 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      className="btnTest"
      key="0"
      onClick={[Function]}
    />
  </li>
</ul>
`;

exports[`Accordion component renders no sections as active by default 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      className="btnTest"
      key="0"
      onClick={[Function]}
    />
  </li>
</ul>
`;
